birincgi commit